fixed the searchbar overlaping hotels

--- a/client/components/heroHeaderHotels/heroHeaderHotels.module.css
+++ b/client/components/heroHeaderHotels/heroHeaderHotels.module.css
@@ -38,7 +38,7 @@
   transform: translate(-50%, 50%);
   z-index: 1;
   width: 90%;
-  top: -30px;
+  top: -70px;
   max-width: 400px;
 }
 
